<resources>
    <string name="app_name">LifePlus TV</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_search_keyword">Enter Search Keyword</string>
    <string name="search_show">Search Show..</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Registration</string>
    <string name="no_shows_found">No Shows Found</string>
    <string name="_10">/10</string>
    <string name="premiered">Premiered:</string>
    <string name="fill_up_this_form_to_register">Fill up this form to register.</string>
    <string name="tv">TV</string>
    <string name="profile">Profile</string>
    <string name="show_details">Show Details</string>
    <string name="see_more_details_on">See more details on:</string>
    <string name="tvmaze_score">TvMaze Score:</string>
    <string name="country">Country:</string>
    <string name="language">Language:</string>
    <string name="summary">Summary:</string>
    <string name="name_cln">Name:</string>
    <string name="admin">Admin</string>
    <string name="log_out">Log out</string>
</resources>