<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.screen.RegistrationFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_special_bg"
            android:contentDescription="@string/logo"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_arrow_back"
            app:tint="?colorPrimary" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxLines="1"
            android:text="@string/registration"
            android:textColor="?colorPrimary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:maxLines="1"
                android:text="Fill up this form to register."
                android:textColor="@color/blueLight"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutName"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:autofillHints="username"
                android:hint="@string/name"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth=".4dp"
                app:boxStrokeWidthFocused="1dp"
                app:errorEnabled="true"
                app:placeholderText="Enter Name"
                app:placeholderTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@id/userName"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutUserName"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:autofillHints="username"
                android:hint="@string/user_name"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth=".4dp"
                app:boxStrokeWidthFocused="1dp"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/green"
                app:placeholderText="Enter User Name"
                app:placeholderTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@id/phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPhone"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:autofillHints="username"
                android:hint="@string/phone_number"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth=".4dp"
                app:boxStrokeWidthFocused="1dp"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:errorEnabled="true"
                app:placeholderText="Enter Phone Number"
                app:placeholderTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:nextFocusForward="@id/pass"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPass"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:autofillHints="password"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth=".4dp"
                app:boxStrokeWidthFocused="1dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:passwordToggleEnabled="true"
                app:placeholderText="Enter Password"
                app:placeholderTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:nextFocusForward="@id/rePass"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutRePass"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:autofillHints="password"
                android:hint="@string/confirm_password"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth=".4dp"
                app:boxStrokeWidthFocused="1dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:passwordToggleEnabled="true"
                app:placeholderText="@string/confirm_password"
                app:placeholderTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rePass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:nextFocusForward="@id/btnSignUp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_14sdp"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/_14ssp"
                    app:cornerRadius="16dp" />
            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>