<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.screen.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center|top"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp">

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginVertical="@dimen/_5sdp"
                android:translationZ="1dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:boxCornerRadiusTopStart="@dimen/_20sdp"
                app:boxStrokeColor="?colorPrimary"
                app:boxStrokeWidth="0dp"
                app:endIconDrawable="@drawable/ic_close"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_show"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/_85sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="@dimen/_35sdp"
                app:strokeColor="@color/blueLight"
                app:strokeWidth="@dimen/_4sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_140sdp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="-40dp"
                android:layout_marginBottom="@dimen/_30sdp"
                app:cardBackgroundColor="@color/blueLight"
                app:cardCornerRadius="@dimen/_70sdp"
                app:cardElevation="0dp" />

        </FrameLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:trackColor="@color/white"
            app:trackCornerRadius="@dimen/_14sdp"
            app:trackThickness="@dimen/_7sdp"
            tools:visibility="visible" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_10sdp"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/item_show" />


            <TextView
                android:id="@+id/noHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enter_search_keyword"
                android:textColor="@color/gray"
                android:textSize="@dimen/_11ssp" />
        </FrameLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:maxLines="1"
            android:text="@string/tv"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnProfile"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardBackgroundColor="#278ED1"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/white">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center"
                android:maxLines="1"
                android:paddingStart="@dimen/_14sdp"
                android:paddingEnd="0dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_profile"
                tools:text="@tools:sample/first_names" />

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
